# rce-autocomplete

./: README.md  canvas-custom.js  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py
app/api/endpoints/: chat.py  completion.py  transform.py
app/core/: config.py
app/schemas/: chat.py  completion.py  transform.py
app/services/: llm.py  yt.py
